--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -12,7 +12,7 @@
          <div class="d-flex">
             <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
             <li ngbNavItem="query">
-               <div class="col-md-12 layout-left">
+               <div class="col-md-12 layout-left1">
                   <a ngbNavLink>Query & <br> Collaboration</a>
                </div>
                <ng-template ngbNavContent>
