--- a/src/app/modules/career/components/ux-job-description/ux-job-description.component.scss
+++ b/src/app/modules/career/components/ux-job-description/ux-job-description.component.scss
@@ -104,10 +104,10 @@
                     color: #8B8B8F;
                 }
                 p{
-                    font-size: 20px;
+                    font-size: 16px;
                     color: #282829;
-                    padding-top: 35px;
-                    line-height: 45px;
+                    padding-top: 10px;
+                    line-height: 32px;
                 }
                 .button{
                     margin-top: 40px;
@@ -116,7 +116,7 @@
                     }
                 }
                 .btn-white{
-                    background-color: #FF424B;
+                    background-color: #C3343C;
                     color: #FCFCFC;
                     font-size: 20px;
                     padding: 15px;
