--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -55,10 +55,10 @@
     <div class="situations-layout">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-  <h2>Situations where usability testing will be of great use</h2>
+          <div class="col-md-5">
+             <h2>Situations where usability testing will be of great use</h2>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-7">
             <div [ngbNavOutlet]="nav"></div>
             <ul ngbNav #nav="ngbNav">
               <li ngbNavItem>
@@ -178,7 +178,7 @@
         <ngb-panel id="static-2">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Exploratory Testing</h2></div>
+                 <div>Exploratory Testing</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
@@ -193,7 +193,7 @@
          <ngb-panel id="static-3">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Remote Testing</h2></div>
+                 <div>Remote Testing</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
@@ -208,7 +208,7 @@
          <ngb-panel id="static-4">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Contextual Testing</h2></div>
+                 <div>Contextual Testing</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
