--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -187,7 +187,7 @@
         <ngb-panel id="static-2">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Discovering User Needs</h2></div>
+                 <div>Discovering User Needs</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
@@ -207,7 +207,7 @@
          <ngb-panel id="static-3">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Supporting Solution</h2></div>
+                 <div>Supporting Solution</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
@@ -226,7 +226,7 @@
          <ngb-panel id="static-4">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Test Feature Viability</h2></div>
+                 <div>Test Feature Viability</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
