--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -3,19 +3,20 @@
 @import '~bootstrap/scss/mixins';
 h2{
     font-size: 56px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 24px;
-    @include media-breakpoint-down(sm) {
-        font-size: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    @include media-breakpoint-down(md) {
+        font-size: 14px;
     }
 }
 h6{
     font-size: 36px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 28px;
     }
 }  
@@ -55,6 +56,9 @@ h6{
         @include media-breakpoint-down(md){
             padding: 150px 0px;
         }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
     .image-event{
         img{
@@ -74,9 +78,9 @@ h6{
         h2{
             margin-bottom: 30px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 200px 0px;
         }
@@ -84,15 +88,15 @@ h6{
             padding: 150px 0px;
         }
         @include media-breakpoint-down(sm){
-            padding: 150px 0px;
+            padding: 80px 0px;
             h2{
                 font-size: 36px;
                 margin-bottom: 30px;
             }
-            p{
-                font-size: 24px;
-                line-height: 40px;
-            }
+            // p{
+            //     font-size: 24px;
+            //     line-height: 40px;
+            // }
         }
     }
     .target-strategy{
@@ -102,11 +106,14 @@ h6{
         .strategy{
             margin-top: 30px;
         }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
     .needs-challenges{
         background-color: #6DAFD8;
         color: #FCFCFC;
-        margin-bottom: 70px;
+        //margin-bottom: 70px;
         .left{
             padding: 50px 0px;
         }
@@ -124,6 +131,12 @@ h6{
         }
         @include media-breakpoint-down(lg){
             padding: 50px 0px;
+            h1{
+                font-size: 100px;
+            }
+            h2{
+                padding-left: 40px;
+            }
         }
         @include media-breakpoint-down(md){
             padding: 50px 0px;
@@ -135,17 +148,21 @@ h6{
             }
         }
         @include media-breakpoint-down(sm){
-            padding: 50px 0px;
+            padding: 0px 0px;
             margin-bottom: 0px;
             h2{
-                padding-left: 20px;
+                padding-left: 15px;
+            }
+            .left{
+                padding: 80px 0px 0 0;
             }
             .needs{
-                height: 700px;
+                height: 530px;
                 overflow: hidden;
+                padding: 0px 0px;
             }
             .needs-right{
-                padding: 10px 0px;
+                padding: 30px 0 0 0;
             }
         }
     }
@@ -179,8 +196,8 @@ h6{
                     padding-left: 12px;
                 }
            }
-           @include media-breakpoint-down(sm){
-            padding: 0px 40px 80px 20px;
+           @include media-breakpoint-down(md){
+            padding: 100px 40px 80px 30px;
             h2{
                 font-size: 30px;
                 margin-top: 80px;
@@ -189,6 +206,9 @@ h6{
             .btn{
                 font-size: 16px;
             }
+           }
+           @include media-breakpoint-down(sm){
+            padding: 0px 40px 80px 20px;
            }
        }
        .right{
@@ -204,12 +224,12 @@ h6{
                    margin: 40px 130px 20px 40px;
                }
                h4{
-                   font-size: 20px;
+                   font-size: 16px;
                    font-weight: 400;
                    margin: 0 0 10px 40px;
                }
            }
-           @include media-breakpoint-down(sm){
+           @include media-breakpoint-down(md){
             .class{
                 h3{
                     font-size: 24px;
