--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -103,7 +103,7 @@
                     margin-top: -90px;
                 }
                 p{
-                    font-size: 20px;
+                    font-size: 16px;
                     color: #282829;
                     padding-top: 35px;
                     line-height: 45px;
@@ -115,7 +115,7 @@
                     }
                 }
                 .btn-white{
-                    background-color: #FF424B;
+                    background-color: #C3343C;
                     color: #FCFCFC;
                     font-size: 20px;
                     padding: 15px;
