--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -94,7 +94,7 @@
           <ngb-panel id="static-2">
              <ng-template ngbPanelTitle>
                 <div class="dis_flex">
-                   <div><h2>Testing & Support</h2></div>
+                   <div>Testing & Support</div>
                    <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
                 </div>
               </ng-template> 
