--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -165,7 +165,7 @@
         <ngb-panel id="static-2">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>User Interface Evaluation</h2></div>
+                 <div>User Interface Evaluation</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
@@ -180,7 +180,7 @@
          <ngb-panel id="static-3">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Visual Design System</h2></div>
+                 <div>Visual Design System</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
@@ -195,7 +195,7 @@
          <ngb-panel id="static-4">
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div><h2>Branding & Identity</h2></div>
+                 <div>Branding & Identity</div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template>
