--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -131,7 +131,7 @@
           <ngb-panel id="static-2">
              <ng-template ngbPanelTitle>
                 <div class="dis_flex">
-                   <div><h2>Testing  & Implementation</h2></div>
+                   <div>Testing  & Implementation</div>
                    <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
                 </div>
               </ng-template> 
