--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -15,7 +15,7 @@
         color: #000000;
     }
     p{
-        font-size: 30px;
+        font-size: 18px;
         color: #000000;
     }
     .banner-content{
@@ -30,7 +30,7 @@
         }
     }
     @include media-breakpoint-down(md){
-        height: 600px;
+        height: 450px;
         .row{
             .col-md-5{
                 flex: 0 0 80%;
@@ -40,21 +40,21 @@
         .banner-content{
             padding: 200px 0px;
         }
+        h1{
+            font-size: 36px;
+        }
+        p{
+            font-size: 16px;
+        }
     }
     @include media-breakpoint-down(sm){
         background-position: center;
-        height: 770px;
+        height: 560px;
         .row{
             .col-md-5{
                 flex: 0 0 100%;
                 max-width: 100%;
             }
-        }
-        h1{
-            font-size: 36px;
-        }
-        p{
-            font-size: 24px;
         }
     }
 }
@@ -75,11 +75,8 @@
        }
        @include media-breakpoint-down(md){
         h3{
-            font-size: 34px;
+            font-size: 30px;
         }
-       }
-       @include media-breakpoint-down(sm){
-        padding: 150px 0px;
        }
     }
     .right-layout{
@@ -104,9 +101,9 @@
         margin-bottom: 30px;
     }
     p{
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 200;
-        margin-top: 60px;
+        margin-top: 40px;
     }
     .list{
         padding: 30px;
@@ -114,7 +111,7 @@
             width: 30px;
         }
         span{
-            font-size: 24px;
+            font-size: 20px;
             margin-left: 20px;
             font-weight: 200;
         }
@@ -150,13 +147,22 @@
                 max-width: 50%;
             }
         }
+        h3{
+            font-size: 28px;
+        }
+        p{
+            font-size: 20px;
+        }
+        .list{
+            span{
+                font-size: 18px;
+            }
+        }
     }
     @include media-breakpoint-down(sm){
+        padding: 100px 0;
         .list{
             padding: 12px;
-            span{
-                font-size: 20px;
-            }
         }
         .row{
             .col-md-5{
@@ -172,18 +178,9 @@
                 max-width: 100%;
             }
         }
-        h3{
-            font-size: 28px;
-        }
-        p{
-            font-size: 20px;
-        }
     }
 }
 .service-layout3{
-    @include media-breakpoint-down(sm){
-        display: none;
-    }
     background-color: #FCFCFC;
     padding: 150px 0px;
     color: #282829;
@@ -199,13 +196,21 @@
         font-size: 56px;
     }
     p{
-        font-size: 20px;
+        font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
     }
     .li{
-        font-size: 20px;
+        font-size: 16px;
         margin-top: 6px;
+    }
+    @include media-breakpoint-down(md){
+        h2{
+            font-size: 36px;
+        }
+    }
+    @include media-breakpoint-down(sm){
+        display: none;
     }
 }
 }
@@ -215,58 +220,51 @@
 }
 
 @include media-breakpoint-down(sm) {
-
     .service-layout3-responsive{
-        margin-top: 100px;
+        margin: 100px 0;
         display: block;
-        ::ng-deep{
-            .card{
-                background-color: #FFFFFF !important;
-            }
-        }
-        ::ng-deep{
-        .card-header {
+        .card{
             background-color: #FFFFFF !important;
         }
-        .btn-link:hover {
-            color: #C3343C;
-            font-size: 20px;
-        
+        ::ng-deep .card-header {
+            background-color: #FFFFFF !important;
         }
-        .btn-link {
-            font-size: 20px;
-            font-weight: 700; 
+        ::ng-deep .btn-link:hover {
             color: #C3343C;
+            font-size: 20px;
+        }
+        ::ng-deep .btn-link {
+            font-size: 20px;
+            font-weight: 500; 
+            color: #282829;
             text-decoration: none;
             width: 100%;
         }
-        .dis_flex{
+        ::ng-deep .btn-link.active {
+            color: #C3343C;
+        }
+        ::ng-deep .dis_flex{
             display:flex;
             align-items: center;
             justify-content: space-between;
         }
-        .btn:focus  {
+        ::ng-deep .btn:focus  {
              outline: 0;
              box-shadow: none !important; 
         }
-        .collapsed .arrow_rotate{
+        ::ng-deep .collapsed .arrow_rotate{
             -ms-transform: rotate(180deg);  
             transform: rotate(180deg);
         }
-    }
-    h2{
-        font-size: 20px;
-        color: #282829;
-    }
     .design-left{
-        padding: 40px 20px;
+        padding: 10px 20px 40px 20px;
             p{
-                font-size: 20px;
+                font-size: 16px;
                 color: #282829;
                 padding-top: 10px;
             }
             .li{
-                font-size: 20px;
+                font-size: 16px;
                 margin-top: 6px;
             }
         }
@@ -279,6 +277,12 @@
     font-weight: 600;
     svg{
         margin-top: 8px;
+    }
+    @include media-breakpoint-down(md){
+        font-size: 28px;
+        svg{
+            margin-top: 0px;
+        }
     }
 }
 .nav-pills{
@@ -294,6 +298,6 @@
 .nav-pills a{
     color: #282829;
 }
-.flex-column{
-    padding: 75px 0px;
-}
+// .flex-column{
+//     padding: 75px 0px;
+// }
