--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -3,19 +3,20 @@
 @import '~bootstrap/scss/mixins';
 h2{
     font-size: 56px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 24px;
-    @include media-breakpoint-down(sm) {
-        font-size: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    @include media-breakpoint-down(md) {
+        font-size: 14px;
     }
 }
 h6{
     font-size: 36px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 28px;
     }
 } 
@@ -56,6 +57,9 @@ h6{
         @include media-breakpoint-down(md){
             padding: 150px 0px;
         }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
     .image-event{
         img{
@@ -75,9 +79,9 @@ h6{
         h2{
             margin-bottom: 30px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 200px 0px;
         }
@@ -85,15 +89,15 @@ h6{
             padding: 150px 0px;
         }
         @include media-breakpoint-down(sm){
-            padding: 150px 0px;
+            padding: 80px 0px;
             h2{
                 font-size: 36px;
                 margin-bottom: 30px;
             }
-            p{
-                font-size: 24px;
-                line-height: 40px;
-            }
+            // p{
+            //     font-size: 24px;
+            //     line-height: 40px;
+            // }
         }
     }
     .target-strategy{
@@ -102,6 +106,9 @@ h6{
         padding: 150px 0px;
         .strategy{
             margin-top: 30px;
+        }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
         }
     }
     .needs-challenges{
@@ -135,6 +142,9 @@ h6{
         }
         @include media-breakpoint-down(lg){
             padding: 50px 0px;
+            h1{
+                font-size: 100px;
+            }
         }
         @include media-breakpoint-down(md){
             padding: 50px 0px;
@@ -146,13 +156,13 @@ h6{
             }
         }
         @include media-breakpoint-down(sm){
-            padding: 50px 0px;
+            padding: 0px 0px;
             .needs{
-                height: 1250px;
+                height: 860px;
                 overflow: hidden;
             }
             .needs-right{
-                padding: 50px 30px;
+                padding: 50px 0 0 0;
             }
         }
     }
@@ -162,9 +172,9 @@ h6{
         h6{
             line-height: 55px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
         }
@@ -174,10 +184,10 @@ h6{
                font-size: 28px;
                line-height: 43px;
             }
-            p{
-                font-size: 20px;
-                line-height: 35px;
-            }
+            // p{
+            //     font-size: 20px;
+            //     line-height: 35px;
+            // }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -198,9 +208,9 @@ h6{
             line-height: 55px;
             margin-top: 100px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
             img{
@@ -213,14 +223,18 @@ h6{
             h6{
                font-size: 28px;
             }
-            p{
-               font-size: 24px;
-            }
+            // p{
+            //    font-size: 24px;
+            // }
         }
         @include media-breakpoint-down(sm){
             padding: 40px 0px;
+            h6{
+                margin-top: 20px;
+             }
             img{
                 width: 100%;
+                margin-top: 50px;
             }
     }
 }
@@ -246,7 +260,7 @@ h6{
             padding: 50px 0px;
             img{
                 width: 110%;
-                margin-top: 100px;
+                margin-top: 50px;
             }
         }
     }
@@ -280,8 +294,8 @@ h6{
                     padding-left: 12px;
                 }
            }
-           @include media-breakpoint-down(sm){
-            padding: 0px 40px 80px 20px;
+           @include media-breakpoint-down(md){
+            padding: 100px 40px 80px 30px;
             h2{
                 font-size: 30px;
                 margin-top: 80px;
@@ -290,6 +304,9 @@ h6{
             .btn{
                 font-size: 16px;
             }
+           }
+           @include media-breakpoint-down(sm){
+            padding: 0px 40px 80px 20px;
            }
        }
        .right{
@@ -305,12 +322,12 @@ h6{
                    margin: 40px 130px 20px 40px;
                }
                h4{
-                   font-size: 20px;
+                   font-size: 16px;
                    font-weight: 400;
                    margin: 0 0 10px 40px;
                }
            }
-           @include media-breakpoint-down(sm){
+           @include media-breakpoint-down(md){
             .class{
                 h3{
                     font-size: 24px;
