--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -3,19 +3,20 @@
 @import '~bootstrap/scss/mixins';
 h2{
     font-size: 56px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 24px;
-    @include media-breakpoint-down(sm) {
-        font-size: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    @include media-breakpoint-down(md) {
+        font-size: 14px;
     }
 }
 h6{
     font-size: 36px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         font-size: 28px;
     }
 }  
@@ -55,6 +56,9 @@ h6{
         @include media-breakpoint-down(md){
             padding: 150px 0px;
         }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
       .image-event{
         img{
@@ -74,9 +78,9 @@ h6{
         h2{
             margin-bottom: 30px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 200px 0px;
         }
@@ -84,15 +88,15 @@ h6{
             padding: 150px 0px;
         }
         @include media-breakpoint-down(sm){
-            padding: 150px 0px;
+            padding: 80px 0px;
             h2{
                 font-size: 36px;
                 margin-bottom: 30px;
             }
-            p{
-                font-size: 24px;
-                line-height: 40px;
-            }
+            // p{
+            //     font-size: 24px;
+            //     line-height: 40px;
+            // }
         }
     }
     .target-strategy{
@@ -102,6 +106,9 @@ h6{
         .strategy{
             margin-top: 30px;
         }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
     .research{
         padding: 80px 0px;
@@ -109,9 +116,9 @@ h6{
         h6{
             line-height: 55px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
         }
@@ -121,10 +128,10 @@ h6{
                font-size: 28px;
                line-height: 43px;
             }
-            p{
-                font-size: 20px;
-                line-height: 35px;
-            }
+            // p{
+            //     font-size: 20px;
+            //     line-height: 35px;
+            // }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -138,9 +145,9 @@ h6{
             line-height: 55px;
             margin-top: 100px;
         }
-        p{
-            line-height: 40px;
-        }
+        // p{
+        //     line-height: 40px;
+        // }
         img{
             padding: 200px 125px;
         }
@@ -152,18 +159,28 @@ h6{
             }
         }
         @include media-breakpoint-down(md){
-            padding: 40px 0px;
+            padding: 80px 0px;
             h6{
                font-size: 28px;
+               margin-top: 0px;
             }
-            p{
-               font-size: 24px;
+            // p{
+            //    font-size: 24px;
+            // }
+            img{
+                padding: 90px 20px;
+                margin-top: 0px;
             }
         }
         @include media-breakpoint-down(sm){
             padding: 40px 0px;
+            h6{
+                margin-top: 20px;
+             }
             img{
                 width: 100%;
+                margin-top: 50px;
+                padding: 0;
             }
     }
     }
@@ -189,7 +206,7 @@ h6{
             padding: 50px 0px;
             img{
                 width: 100%;
-                margin-top: 100px;
+                margin-top: 50px;
             }
         }
     }
@@ -223,8 +240,8 @@ h6{
                     padding-left: 12px;
                 }
            }
-           @include media-breakpoint-down(sm){
-            padding: 0px 40px 80px 20px;
+           @include media-breakpoint-down(md){
+            padding: 100px 40px 80px 30px;
             h2{
                 font-size: 30px;
                 margin-top: 80px;
@@ -233,6 +250,9 @@ h6{
             .btn{
                 font-size: 16px;
             }
+           }
+           @include media-breakpoint-down(sm){
+            padding: 0px 40px 80px 20px;
            }
        }
        .right{
@@ -248,12 +268,12 @@ h6{
                    margin: 40px 130px 20px 40px;
                }
                h4{
-                   font-size: 20px;
+                   font-size: 16px;
                    font-weight: 400;
                    margin: 0 0 10px 40px;
                }
            }
-           @include media-breakpoint-down(sm){
+           @include media-breakpoint-down(md){
             .class{
                 h3{
                     font-size: 24px;
