--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,62 @@
 <footer>
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <h2>Let's craft design together!</h2>
-            <div class="button">
+        <div class="col-md-3">
+            <h2>What We Do</h2>
+            <ul class="contact">
+                <li>
+                    <a href="#">Work</a>
+                </li>
+                <li>
+                    <a href="#">Service</a>
+                </li>
+                <li>
+                    <a href="#">Engagement Models</a>
+                </li>
+            </ul>
+            <!--<div class="button">
                 <div class="btn btn-white">Let's Talk <img src="./assets/images/rightarrow.svg"></div>
-            </div>
+            </div>-->
         </div>
-        <div class="col-md-6">
-            <h4>For a quick response</h4>
+        <div class="col-md-3">
+            <h2>Who We Are</h2>
+            <ul class="contact">
+                <li>
+                    <a href="#">About As</a>
+                </li>
+                <li>
+                    <a href="#">Blogs</a>
+                </li>
+                <li>
+                    <a href="#">Careers</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h2>Services</h2>
+            <ul class="contact">
+                <li>
+                    <a href="#">User Experience</a>
+                </li>
+                <li>
+                    <a href="#">Interface Design</a>
+                </li>
+                <li>
+                    <a href="#">UI Development</a>
+                </li>
+                <li>
+                    <a href="#">End To End Development</a>
+                </li>
+                <li>
+                    <a href="#">Usability Testing</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h2>Contact Us</h2>
             <ul class="contact">
                 <li>
                     <a href="mailto:enquire@uxmint.in">hello@uxmint.in</a>
@@ -21,14 +69,23 @@
                 <li>
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
-            </ul>
-            <ul class="socialmedia">
-                <li><a href="https://www.linkedin.com/company/uxmint" target="_blank"><img src="./assets/images/linkedin.svg"></a></li>
-                <li><a href="https://medium.com/uxmint" target="_blank"><img src="./assets/images/medium.svg"></a></li>
-            </ul>
-            <div class="credits">
-                @2021 . <span><a>Privacy Policy</a></span> . <span><a>Terms & Conditions</a></span>
-            </div>
+                <li>
+                    <a href="#">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#">Medium</a>
+                </li>
+            </ul> 
+          
+        </div>
+    </div>
+    <hr class="line">
+    <div class="footer-bottom">
+        <div class="rights float-left">
+            <h2>All Rights reserved@2021 </h2>
+        </div>
+        <div class="rights float-right">
+            <h2>Privacy Policy | Terms & Conditions </h2>
         </div>
     </div>
 </div>
