--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,33 +4,42 @@
 
 .home{
     .layout{
-        background-image: url('/dev/assets/images/layout-1.png');
+        background-color: #E2E2E2;
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
-        height: 780px;
+        height: 600px;
         h2{
-            font-size: 56px;
-            font-weight: 500;
-            color: #FFF;
-            padding-top: 300px;
+            font-size: 48px;
+            color: #3B3B3B;
+            padding-top: 200px;
+            font-family: Muli;
         }
         h1{
             font-size: 72px;
-            font-weight: 700;
             color: #C3343C;
+            font-family: Baskerville;
+        }
+        p{
+            font-size: 16px;
+            color: #707071;
+            padding-top: 10px;
         }
         @include media-breakpoint-down(md){
-            height: 680px;
+            height: 500px;
             h2{
                 font-size: 24px;
             }
             h1{
                 font-size: 36px;
             }
+            p{
+                font-size: 14px;
+            }
         }
         @include media-breakpoint-down(sm){
-            background-position: 30%;
+            height: 500px;
+           
         }
     }
     .feature-work{
@@ -41,38 +50,35 @@
         .card{
             border: none;
             padding: 100px 170px 100px 100px;
-            height: 600px;
+            //height: 600px;
             h3{
-                font-size: 28px;
-                font-weight: 700;
-                color: #707070;
-                margin-bottom: 60px;
+                font-size: 24px;
+                font-family: Muli;
+                color: #282829;
+                margin-bottom: 40px;
             }
             h2{
-                font-size: 48px;
-                font-weight: 700;
+                font-size: 57px;
+                font-family: Baskerville;
+                color: #222222;
                 margin-bottom: 40px;
             }
             h4{
-                font-size: 18px;
-                font-weight: 400;
-                color: #707070;
+                font-size: 20px;
+                font-family: Muli;
+                color: #5A5A5A;
                 margin-bottom: 60px;
             }
             .btn{
-                background-color: #C3343C;
+                border: 2px solid #0D0D0D;
                 border-radius: 0;
-                color: #FFF;
+                color: #0D0D0D;
                 cursor: pointer;
-                font-size: 16px;
-                font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
+                font-size: 20px;
+                font-family: Muli;
             }
         }
         .step-image{
-            background-color: #3E4268;
             text-align: center;
             padding: 80px 0px;
             margin-bottom: -12px;
@@ -87,7 +93,7 @@
         // .nav{
         //     width: 51%;
         // }
-        .nav-pills{
+        /*.nav-pills{
             a{
                 padding: 6px 180px 6px 180px;
             }
@@ -98,7 +104,7 @@
             .nav-link.active{
                 background-color: #C3343C;
             }
-        }
+        }*/
         @include media-breakpoint-down(lg){
             .card{
                 padding: 100px 10px 100px 50px;
@@ -121,28 +127,18 @@
             }
         }
         @include media-breakpoint-down(sm){
-            .row{
-                .first{
-                    order: 1;
-                }
-                .second{
-                    order: 2;
-                    background-color: #3E4268;
-                }
-            }
+           
             .card{
-                background-color: #3E4268;
+                //background-color: #3E4268;
                 padding: 40px 0px 0px 10px;
                 height: 220px;
-                h3{
-                    display: none;
-                }
+               
                 h2{
-                    color: #FFF;
+                    //color: #FFF;
                     margin-bottom: 20px;
                 }
                 h4{
-                    color: #FFF;
+                    //color: #FFF;
                     margin-bottom: 30px;
                 }
             }
@@ -152,8 +148,8 @@
         }
     }
     .products{
-        background-color: #C3343C;
-        padding: 40px 0;
+        //background-color: #C3343C;
+        padding: 80px 0;
         color: #FFF;
         h4{
             font-size: 28px;
@@ -162,28 +158,27 @@
             font-weight: 400;
         }
         h2{
-            font-size: 48px;
-            font-weight: 500;
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #101010;
             padding-top: 60px;
             margin-bottom: 20px;
             line-height: 60px;
         }
         h3{
-            font-size: 16px;
-            font-weight: 300;
+            font-size: 20px;
+            font-family: Muli;
             line-height: 32px;
+            color: #6F6F6E;
             margin-bottom: 50px;
         }
         .btn{
-            background-color: #FFF;
-            color: #C3343C;
+            border: 2px solid #0D0D0D;
             border-radius: 0;
+            color: #0D0D0D;
             cursor: pointer;
-            font-size: 18px;
-            font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
+            font-size: 20px;
+            font-family: Muli;
         }
         .icon{
             text-align: center;
@@ -207,64 +202,6 @@
                 padding: 0 0 0 0;
             }
         }
-        // .flex{
-        //     display: flex;
-        //     padding: 150px 0px 40px 0px;
-        //     .icon1{
-        //         padding: 0 120px 0 0px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        //     .icon2{
-        //         padding: 0 220px 0 65px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        //     .icon3{
-        //         padding: 0 240px 0 65px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        //     .icon4{
-        //         padding: 0 140px 0 65px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        //     .icon5{
-        //         padding: 0 140px 0 65px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        //     .icon6{
-        //         padding: 0 0px 0 65px;
-        //         position: relative;
-        //         img{
-        //             position: absolute;
-        //             //left: 0;
-        //             bottom: 0;
-        //         }
-        //     }
-        // }
         @include media-breakpoint-down(lg){
             .row{
                 .col-md-2{
@@ -307,38 +244,126 @@
             }
         }
     }
+     .logo{
+         background-color: #E2E2E2;
+    .flex{
+        //overflow-y: scroll;
+        display: flex;
+        padding: 100px 0px 40px 30px;
+        .icon1{
+            padding: 0 10px 0 0px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+        .icon2{
+            padding: 0 20px 0 65px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+        .icon3{
+            padding: 0 30px 0 65px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+        .icon4{
+            padding: 0 40px 0 65px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+        .icon5{
+            padding: 0 50px 0 65px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+        .icon6{
+            padding: 0 60px 0 65px;
+            position: relative;
+            img{
+                bottom: 0;
+            }
+        }
+    }
+    @include media-breakpoint-down(lg){
+        .flex{
+         overflow-y: scroll;
+         display: flex;
+         padding: 100px 0px 40px 30px;
+        }
+    }
+    @include media-breakpoint-down(lg){
+        .flex{
+            overflow-y: scroll;
+            display: flex;
+            padding: 100px 0px 40px 30px;
+           }
+        }
+        @include media-breakpoint-down(lg){
+            .flex{
+                overflow-y: scroll;
+                display: flex;
+                padding: 100px 0px 40px 30px;
+               }
+        }
+}
     .cater{
-        background-color: #282829;
+        background-color: #FCFCFC;
         padding: 100px 0px;
         color: #FFF;
         h2{
-            font-size: 56px;
-            font-weight: 500;
+            font-size: 57px;
+           font-family: Baskerville;
+           color: #020202;
             margin-bottom: 60px;
         }
+        .left{
+            margin-left: -100px;
+        }
         .btn{
-            background-color: #C3343C;
+            border: 2px solid #0D0D0D;
             border-radius: 0;
-            color: #FFF;
+            color: #0D0D0D;
             cursor: pointer;
-            font-size: 18px;
-            font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
+            font-size: 20px;
+            font-family: Muli;
         }
         h4{
             font-size: 18px;
             font-weight: 400;
+            color: #020202;
             line-height: 36px;
             padding-top: 10px;
         }
-        // .icon{
-        //     margin-top: 10px;
-        // }
+         .icon{
+            svg{
+                margin-top: 20px;
+                color: #6f6f6e;
+            }
+         }
+         svg:hover{
+           color: #C3343C!important;
+        
+          }
         .types{
+            background-color: #FFFFFF;
+            cursor: pointer;
+            //padding: 5px 5px;
             margin-bottom: 50px;
             margin-left: 100px;
+        }
+        .image{
+            img{
+               margin-top: 35px;
+            }
         }
         @include media-breakpoint-down(lg){
             h4{
@@ -346,6 +371,9 @@
             }
             .types{
                 margin-left: 0px;
+            }
+            .left{
+                margin-left: -20px;
             }
         }
         @include media-breakpoint-down(md){
@@ -356,11 +384,15 @@
                 font-size: 16px;
             }
             .icon{
-                margin-top: 10px;
-            }
+                img{
+                    margin-top: 20px;
+                }
+             }
             h4{
                 font-size: 18px;
-                padding-top: 0;
+            }
+            .left{
+                margin-left: -17px;
             }
         }
         @include media-breakpoint-down(sm){
@@ -395,31 +427,28 @@
         }
        .left{
            padding: 40px 130px 80px 90px;
-           background-color: #C3343C;
+           background-color: #E2E2E2;
            h4{
                font-size: 28px;
                font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-               color: #FFF;
+               color: #282829;
                font-weight: 400;
            }
            h2{
-               font-size: 48px;
-               font-weight: 500;
-               color: #FFF;
+               font-size: 57px;
+             font-family: Baskerville;
+               color: #282829;
                margin-top: 120px;
                margin-bottom: 80px;
            }
            .btn{
-               background-color: #FFF;
-               border-radius: 0;
-               color: #C3343C;
-               cursor: pointer;
-               font-size: 18px;
-               font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
-           }
+            border: 2px solid #0D0D0D;
+            border-radius: 0;
+            color: #0D0D0D;
+            cursor: pointer;
+            font-size: 20px;
+            font-family: Muli;
+        }
        }
        .right{
            .class{
@@ -489,6 +518,38 @@
             }
         }
        }
+    }
+    .craft{
+        background-color: #C3343C;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        h2{
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #FCFCFC;
+        }
+        .button{
+            margin-top: 80px;
+        }
+        .btn-white{
+            border: 2px solid #FFFFFF;
+            color: #FCFCFC;
+            font-size: 20px;
+            padding: 8px;
+            border-radius: 0px;
+            font-family: Muli;
+        }
+        @include media-breakpoint-down(md){
+            h2{
+                font-size: 37px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            .button{
+                margin-top: 50px;
+               padding-left: 15px;
+            }
+        }
     }
 }
 
